--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,6 @@ jobs:
         docker exec CI_container /bin/bash -c 'cd ./Package;\
         source ${{ matrix.SETUP }};\
         export PATH=$HOME/.local/bin/:$PATH;\
-        cat .github/scripts/yamlheader.md  $${{ matrix.PAGE }} > ${{ matrix.PAGE }};\
+        cat .github/scripts/yamlheader.md  $${{ matrix.PAGE }}.md > ${{ matrix.PAGE }}.md;\
         jupytext ${{ matrix.PAGE }}.md -o ${{ matrix.PAGE }}.ipynb --execute;\
         '
